k8s/oauth2-proxy/00-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: mggt1103-projet
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          args:
            - --provider=keycloak-oidc
            - --oidc-issuer-url=http://auth.projet.local/realms/mggt1103
            - --redirect-url=http://kanboard.projet.local/oauth2/callback
            - --upstream=http://kanboard.mggt1103-projet.svc.cluster.local
            - --http-address=0.0.0.0:4180
            - --client-id=kanboard-sso
            - --email-domain=*
            - --cookie-secure=false
            - --insecure-oidc-allow-unverified-email=true
            - --skip-provider-button=true
            - --set-xauthrequest=true
            - --cookie-domain=.projet.local
            - --whitelist-domain=.projet.local

          ports:
            - containerPort: 4180
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: mggt1103-projet
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180
